[project]
name = "simphony"
version = "0.6.1"
description = "Simphony: A simulator for photonic circuits"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["photonics", "simulation", "circuits", "science", "engineering", "physics", "interconnect"]

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [
  {name = "Sequoia Ploeg", email = "sequoiap4@gmail.com" },
  {name = "Hyrum Gunther"},
  {name = "BYU CamachoLab", email = "camacho@byu.edu"}
]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [
  {name = "Sequoia Ploeg", email = "sequoiap4@gmail.com"},
  {name = "Christian Carver", email = "cjcarv3r@byu.edu"},
  {name = "BYU CamachoLab", email = "camacho@byu.edu"}
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: OS Independent",
]

dependencies = [
  "scipy>=1.5.4",
  "numpy>=1.19.5",
  "pandas>=2.0.0",
  "scikit-rf>=0.28.0",
  "lark~=1.1.5",
  "tabulate",
]

[project.optional-dependencies]
jax = ["jax"]
gdsfactory = ["gdsfactory"]
sipann = ["SiPANN"]
dev = [
  "pre-commit",
  "matplotlib",
  "bump2version~=1.0.0",
  "flake8",
  "pytest",
  "coverage",
  "build",
  "pytest",
  "coverage",
]
doc = [
  "sphinx-book-theme ~= 0.3.3",
  "jupyter-book ~= 0.13.2",
  "sphinx-design ~= 0.1.0",
  "matplotlib",
  "numpy",
  "numpydoc",
  # sphinx-copybutton==0.5.1
  # sphinx-togglebutton==0.3.2
  # "sphinx-tippy",
  # sphinx==5.3.0
  # linkify-it-py==2.0.0
  # sphinxcontrib-bibtex==2.5.0
]
test = [
  "pytest", 
  "coverage",
]

[project.urls]
"Homepage" = "https://simphonyphotonics.readthedocs.io/en/stable/"
"Documentation" = "https://simphonyphotonics.readthedocs.io/en/stable/"
"Source" = "https://github.com/BYUCamachoLab/simphony"
"Bug Reports" = "https://github.com/BYUCamachoLab/simphony/issues"
"Research Group" = "https://camacholab.byu.edu/"

# [tool.setuptools]
# include-package-data = true
# package-data = {"sample" = ["*.dat"]}

[tool.setuptools.packages.find]
include = ["simphony"]
namespaces = false

# [tool.setuptools.package-data]
# simphony = ["*.xml", "*.txt", "*.dat"]

# [tool.setuptools.packages.find]
# where = ["."]

# [project.scripts]
# simphony = "simphony.cli:app"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
console_output_style = "progress"
filterwarnings = ["ignore::UserWarning", "ignore::DeprecationWarning"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = ["SiPANN", "gdsfactory", "jax", "matplotlib", "numpy", "packaging", "parsimonious", "pytest", "scipy"]
known_first_party = ["simphony"]

[build-system]
requires = ["setuptools>=62.0.0", "wheel"]
build-backend = "setuptools.build_meta"
